Userservice for global user-variables. Hide menu on login screen

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,6 @@
 
 
 
-  <script type="text/javascript" src="app/assets/js/scripts.js"></script>
+<!--   <script type="text/javascript" src="app/assets/js/scripts.js"></script> -->
 </body>
 </html>
