--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,12 @@
   <script src="systemjs.config.js"></script>
   <link rel="stylesheet" href="app/assets/styles.css">
 
-
-
   <script>
     System.config({
       defaultJSExtensions: true,
       map: {
         'ng2-bs3-modal': 'node_modules/ng2-bs3-modal',
-        'ng2-spin-kit': 'node_modules/ng2-spin-kit',
+        'ng2-spin-kit': 'node_modules/ng2-spin-kit'
       }
     });
     System.import('main.js').catch(function (err) { console.error(err); });
