--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
   <!-- Polyfill(s) for older browsers -->
@@ -17,6 +17,9 @@
 
   <script src="systemjs.config.js"></script>
   <link rel="stylesheet" href="app/assets/styles.css">
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places" async
+    defer></script>
 
   <script>
     System.config({
@@ -35,6 +38,7 @@
 
 
 
-<!--   <script type="text/javascript" src="app/assets/js/scripts.js"></script> -->
+     
 </body>
+
 </html>
