Added better datetime-picker (flatpickr)

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,15 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
+
+
+  <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
+  <script src="https://unpkg.com/flatpickr"></script>
+
+
+
+
+
   <!-- Polyfill(s) for older browsers -->
   <script src="node_modules/core-js/client/shim.min.js"></script>
 
@@ -23,7 +32,6 @@
 
 
   <script>
-
     System.import('main.js').catch(function (err) { console.error(err); });
   </script>
 
