Geolocation plotting on map now works inside active mission

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
 
-
-  <link rel="stylesheet" href="https://unpkg.com/flatpickr/dist/flatpickr.min.css">
   <script src="https://unpkg.com/flatpickr"></script>
-
-
 
 
 
@@ -29,6 +25,8 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places" async
     defer></script>
+
+  <script src="node_modules/rich-marker/index.js" async defer></script>
 
 
   <script>
