--- a/src/index.html
+++ b/src/index.html
@@ -7,37 +7,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.js"></script>
-
-  <script src="https://unpkg.com/flatpickr"></script>
+  <link rel="stylesheet" href="app/assets/styles.css" type="text/css">
 
 
 
-  <!-- Polyfill(s) for older browsers -->
-  <script src="node_modules/core-js/client/shim.min.js"></script>
-
-  <script src="node_modules/zone.js/dist/zone.js"></script>
-  <script src="node_modules/systemjs/dist/system.src.js"></script>
-
-  <script src="systemjs.config.js"></script>
-  <link rel="stylesheet" href="app/assets/styles.css">
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places" async
-    defer></script>
-
-  <script src="node_modules/rich-marker/index.js" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places"></script>
+  <!-- some external scripts -->
+  <script src="app/assets/js/scripts.js"></script>
 
 
-  <script>
-    System.import('main.js').catch(function (err) { console.error(err); });
-  </script>
-
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="app/assets/icon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="app/assets/icon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="app/assets/icon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="app/assets/icon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="app/assets/icon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="app/assets/icon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="app/assets/icon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="app/assets/icon/apple-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="app/assets/icon/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="app/assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="app/assets/icon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="app/assets/icon/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128" />
+  <meta name="msapplication-TileColor" content="#FFFFFF" />
+  <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+  <meta name="msapplication-square70x70logo" content="app/assets/icon/ms-icon-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="app/assets/icon/ms-icon-150x150.png" />
+  <meta name="msapplication-square310x310logo" content="app/assets/icon/ms-icon-310x310.png" />
+  <link rel="shortcut icon" href="app/assets/icon/favicon.ico" type="image/x-icon" />
 
 </head>
 
 <body>
   <app>Laster...</app>
+
+
+
+
+
 
 </body>
 
