Store config in environment

--- a/src/index.html
+++ b/src/index.html
@@ -8,33 +8,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <link rel="stylesheet" href="app/assets/styles.css" type="text/css">
+  <link rel="stylesheet" href="assets/styles.css" type="text/css">
 
 
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places"></script>
   <!-- some external scripts -->
-  <script src="app/assets/js/scripts.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places"></script>
+  <script src="assets/js/env.js"></script>
+  <script src="assets/js/scripts.js"></script>
 
-
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="app/assets/icon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="app/assets/icon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="app/assets/icon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="app/assets/icon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="app/assets/icon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="app/assets/icon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="app/assets/icon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="app/assets/icon/apple-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="app/assets/icon/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="app/assets/icon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="app/assets/icon/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="app/assets/icon/favicon-16x16.png" sizes="16x16" />
+  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icon/apple-icon-57x57.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/icon/apple-icon-114x114.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/icon/apple-icon-72x72.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/icon/apple-icon-144x144.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/icon/apple-icon-60x60.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/icon/apple-icon-120x120.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/icon/apple-icon-76x76.png" />
+  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/icon/apple-icon-152x152.png" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon-196x196.png" sizes="196x196" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="assets/icon/favicon-16x16.png" sizes="16x16" />
   <meta name="msapplication-TileColor" content="#FFFFFF" />
   <meta name="msapplication-TileImage" content="mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="app/assets/icon/ms-icon-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="app/assets/icon/ms-icon-150x150.png" />
-  <meta name="msapplication-square310x310logo" content="app/assets/icon/ms-icon-310x310.png" />
-  <link rel="shortcut icon" href="app/assets/icon/favicon.ico" type="image/x-icon" />
+  <meta name="msapplication-square70x70logo" content="assets/icon/ms-icon-70x70.png" />
+  <meta name="msapplication-square150x150logo" content="assets/icon/ms-icon-150x150.png" />
+  <meta name="msapplication-square310x310logo" content="assets/icon/ms-icon-310x310.png" />
+  <link rel="shortcut icon" href="assets/icon/favicon.ico" type="image/x-icon" />
 
 </head>
 
