--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <script src="assets/js/env.js"></script>
   <script src="assets/js/scripts.js"></script>
 
+  <!-- some external resources -->
+  <!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
   <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/icon/apple-icon-114x114.png" />
   <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/icon/apple-icon-72x72.png" />
