--- a/src/index.html
+++ b/src/index.html
@@ -2,53 +2,43 @@
 <html>
 
 <head>
-  <title>SAR Status Administration</title>
-  <base href="/">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>SAR Status Administration</title>
+    <base href="/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-  <link rel="stylesheet" href="assets/styles.css" type="text/css">
+    <link rel="stylesheet" href="assets/styles.css" type="text/css">
 
 
 
-  <!-- some external scripts -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places"></script>
-  <script src="assets/js/env.js"></script>
-  <script src="assets/js/scripts.js"></script>
+    <!-- some external scripts -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBYzGTxVG0t0RYu0-IFlqFbp9x4PjLUl_E&libraries=places"></script>
+    <script src="assets/js/env.js"></script>
+    <script src="assets/js/scripts.js"></script>
 
-  <!-- some external resources -->
-  <!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">-->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/icon/apple-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/icon/apple-icon-114x114.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/icon/apple-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/icon/apple-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/icon/apple-icon-60x60.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/icon/apple-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/icon/apple-icon-76x76.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/icon/apple-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="assets/icon/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="assets/icon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="assets/icon/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="assets/icon/favicon-16x16.png" sizes="16x16" />
-  <meta name="msapplication-TileColor" content="#FFFFFF" />
-  <meta name="msapplication-TileImage" content="mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="assets/icon/ms-icon-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="assets/icon/ms-icon-150x150.png" />
-  <meta name="msapplication-square310x310logo" content="assets/icon/ms-icon-310x310.png" />
-  <link rel="shortcut icon" href="assets/icon/favicon.ico" type="image/x-icon" />
+    <!-- some external resources -->
+    <!--<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600" rel="stylesheet">-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
+
+    <!-- favicon support for ios, macos, win and android -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
+    <link rel="manifest" href="assets/icon/manifest.json">
+    <link rel="mask-icon" href="assets/icon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="assets/icon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="assets/icon/mstile-144x144.png">
+    <meta name="msapplication-config" content="assets/icon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
 <body>
-  <app>Laster...</app>
-
-
-
-
-
-
+    <app id="boot" >
+        <!--<img id="boot" src="./assets/img/sar-status-text.svg">-->
+    </app>
 </body>
 
 </html>
