Downgraded to uglify-js@2 to make 'ng build --prod work'

--- a/src/index.html
+++ b/src/index.html
@@ -36,9 +36,7 @@
 </head>
 
 <body>
-    <app id="boot" >
-        <!--<img id="boot" src="./assets/img/sar-status-text.svg">-->
-    </app>
+    <app id="boot" ></app>
 </body>
 
 </html>
